# youtube-analytics-project

./: pyproject.toml
homework-1/src/: channel.py
src/: channel.py  playlist.py  video.py
